# report-deployer

./: Dockerfile  README.md  action.yaml  deployement.yaml  main.py  pyproject.toml
.github/workflows/: python-package.yml  release.yml
auth/: auth_manager.py
deploy/: deploy_manager.py  file_manager.py
report_deployer/: app.py  auth.py  files.py  workspace.py
tests/: test_files.py  tests.py
